Create a dedicated auth/me endpoin to get the current user
